common/force-app/main/default/objects/Time_Period__c/Time_Period__c.object-meta.xml
<CustomObject>
    <description>Holds time periods relating to multiple objects</description>
    <label>Time Period</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Time Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>