common/force-app/main/default/objects/Time_Period__c/fields/Days_2B_Published__c.field-meta.xml
<CustomField>
    <fullName>Days_2B_Published__c</fullName>
    <description>Time to be published</description>
    <label>Days 2B Published</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>