common/force-app/main/default/objects/Time_Period__c/fields/Days_in_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Publishing__c</fullName>
    <label>Days in Publishing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>