common/force-app/main/default/objects/Time_Period__c/fields/Days_in_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Submitted__c</fullName>
    <description>Days in Submitted to be published</description>
    <inlineHelpText>Days in Submitted to be published</inlineHelpText>
    <label>Days in Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>