common/force-app/main/default/objects/Time_Period__c/fields/Days_Since_EOI_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_EOI_Status_Update__c</fullName>
    <description>Days since EOI status has been updated
days spend with no EOI status update</description>
    <label>Days Since EOI Status Update</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>