common/force-app/main/default/objects/Time_Period__c/fields/Days_Since_Raise_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Raise_Status_Update__c</fullName>
    <description>Days since raise Status update</description>
    <label>Days Since Raise Status Update</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>