common/force-app/main/default/objects/Time_Period__c/fields/Days_to_go_Live__c.field-meta.xml
<CustomField>
    <fullName>Days_to_go_Live__c</fullName>
    <description>Number of days to go live</description>
    <label>Days to go Live</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>