common/force-app/main/default/objects/Time_Period__c/fields/EOI_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Last_Modified_Date__c</fullName>
    <label>EOI Last Modified Date</label>
    <type>DateTime</type>
</CustomField>