common/force-app/main/default/objects/Time_Period__c/fields/EOI_Status__c.field-meta.xml
<CustomField>
    <fullName>EOI_Status__c</fullName>
    <description>The status of EOI</description>
    <label>EOI Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>