common/force-app/main/default/objects/Time_Period__c/fields/EOI_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>EOI_Status_Updated__c</fullName>
    <formula>IF(
     Days_Since_EOI_Status_Update__c  &lt; 15,
    &quot;🟢 under 15 days&quot;,
    IF(
        AND(
            Days_Since_EOI_Status_Update__c &gt;= 15,
            Days_Since_EOI_Status_Update__c &lt; 30
        ),
        &quot;🟠 under 30 days&quot;,
        IF(
            AND(
                Days_Since_EOI_Status_Update__c &gt;= 30,
                Days_Since_EOI_Status_Update__c &lt; 100
            ),
            &quot;🔴 under 100 days&quot;,
            IF(
                Days_Since_EOI_Status_Update__c &gt;= 100,
                &quot;🆘 over 100 days&quot;,
                &quot;&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field tells the amount of days that the Related EOI status hasn&apos;t been updated.</inlineHelpText>
    <label>EOI Status Updated</label>
    <type>Text</type>
</CustomField>