common/force-app/main/default/objects/Time_Period__c/fields/Last_EOI_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_EOI_Status_Update__c</fullName>
    <formula>IF(
    OR(
        EOI_Status__c = &quot;Published&quot;,
        EOI_Status__c = &quot;Closed&quot;
    ),
    &quot;🟢 Published/Closed&quot;,
    IF(
        Days_Since_EOI_Status_Update__c &lt; 15,
        &quot;🟢 under 15 days&quot;,
        IF(
            AND(
                Days_Since_EOI_Status_Update__c &gt;= 15,
                Days_Since_EOI_Status_Update__c &lt; 30
            ),
            &quot;🟠 under 30 days&quot;,
            IF(
                AND(
                    Days_Since_EOI_Status_Update__c &gt;= 30,
                    Days_Since_EOI_Status_Update__c &lt; 100
                ),
                &quot;🔴 under 100 days&quot;,
                IF(
                    Days_Since_EOI_Status_Update__c &gt;= 100,
                    &quot;🆘 over 100 days&quot;,
                    &quot;&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days since the last EOI status Update</inlineHelpText>
    <label>Last EOI Status Update</label>
    <type>Text</type>
</CustomField>