common/force-app/main/default/objects/Time_Period__c/fields/Raise_Status__c.field-meta.xml
<CustomField>
    <fullName>Raise_Status__c</fullName>
    <description>Raise Statuses</description>
    <label>Raise Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>