common/force-app/main/default/objects/Time_Period__c/fields/Related_EOI__c.field-meta.xml
<CustomField>
    <fullName>Related_EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>Time Periods</relationshipLabel>
    <relationshipName>Time_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>