common/force-app/main/default/objects/Time_Period__c/fields/Related_Raise__c.field-meta.xml
<CustomField>
    <fullName>Related_Raise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Raise</label>
    <referenceTo>Raise__c</referenceTo>
    <relationshipLabel>Time Periods</relationshipLabel>
    <relationshipName>Time_Periods</relationshipName>
    <type>Lookup</type>
</CustomField>