common/force-app/main/default/objects/Time_Period__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Holds the related record status</inlineHelpText>
    <label>Status</label>
    <type>TextArea</type>
</CustomField>