common/force-app/main/default/objects/Time_Period__c/recordTypes/EOI_Time_Period.recordType-meta.xml
<RecordType>
    <fullName>EOI_Time_Period</fullName>
    <active>true</active>
    <description>Time Period Record for EOI</description>
    <label>EOI Time Period</label>
</RecordType>