common/force-app/main/default/objects/Time_Period__c/recordTypes/Raise_Time_Period.recordType-meta.xml
<RecordType>
    <fullName>Raise_Time_Period</fullName>
    <active>true</active>
    <description>Time Period Record for Raises</description>
    <label>Raise Time Period</label>
</RecordType>