common/force-app/main/default/objects/Time_Period__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Related_EOI__c</columns>
    <columns>Related_Raise__c</columns>
    <columns>Status__c</columns>
    <columns>Days_2B_Published__c</columns>
    <columns>Days_in_Publishing__c</columns>
    <columns>Days_in_Submitted__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>